<resources>
    <string name="app_name">SafeJourney</string>
    <string name="for_safe_efficient">for safe, efficient and inclusive transport system</string>
    <string name="an_initiative_by">An Initiative By</string>
    <string name="developed_by_students_of">Developed by Students of</string>
    <string name="don_t_have_an_account_register">Don\'t have an Account? Register</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="offline_services">Offline Services</string>
    <string name="password">Password</string>
    <string name="safe_journey">Safe Journey</string>
    <string name="username_or_email_address">Username or email</string>
    <string name="no">No</string>
    <string name="fracture">Fracture</string>
    <string name="yes">Yes</string>
    <string name="quest">Do you have a driving licence?</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="register">Register</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="setting">Setting</string>
    <string name="profiles">Profile</string>
    <string name="home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_emergency">Emergency</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_first_aids">FirstAids</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_safety_tips">SafetyTips</string>
    <string name="profilea">Profile</string>
    <string name="notifications">Notification</string>
    <string name="settings">Setting</string>
    <string name="textview">TextView</string>
    <string name="appbar_scrolling_view_behavior">android:support.design.widget.AppBarLayout$ScrollingVie...</string>
    <string name="reg_sucess">You have been successfully registered for the RSTA: Safe Journey application!</string>
    <string name="click_here">Click Here to Login</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="e_mail">e-mail</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="complaint">Complaint</string>
    <string name="location">Location</string>
    <string name="vec_number">Vehicle Number</string>
    <string name="headingTo">Heading To</string>
    <string name="description">Describe the incident briefly...</string>
    <string name="upload">Upload</string>
    <string name="des">1. DO walk in a straight line down the sidewalk\n
        2. DON\’T stop randomly on the sidewalk without checking that people are right behind you.\n
        3. DO stop at crosswalks and pay attention to the signals. Advance/delayed walk signals are there for a reason.\n
        4. DON\’T jaywalk without looking…pedestrians are killed all the time and it’s not always the drivers fault.\n
        5. DO pay attention to your surroundings when walking, especially at night and alone\n
        6. DON\\’T wear headphones and have your music turned up so loud you can’t hear what’s happening on the street; sirens, horns, shouts etc\n
        7. DO take the time to enjoy your walk even if you are in a hurry…look around and see.\n
        8. DON\’T cut across the sidewalk to get to a shop or something without looking behind you, you’re possibly walking into the path of someone else continuing to walk straight ahead.\n
        9. DO smile if you happen to make eye contact with another human being\n
        10. DON\’T walk into things while you’re head is down looking at your phone…trust me, it happens!\n
    </string>
    <string name="rsta1">
        To provide and develop safe, reliable, efficient, cost effective and environment friendly transport services in support of strategies for socio-economic development of the country.
    </string>
    <string name="rsta2">
        To Ensure access to safe, sustainable and inclusive transport systems for accelerated socio-economic development.
    </string>
    <string name="rsta3">
        Safe roads saves life!
    </string>
    <string name="home1">Home</string>
    <string name="mission">Mission</string>
    <string name="rsta">RSTA</string>
    <string name="safe_journey1">Safe Journey</string>
    <string name="vision">Vision</string>
    <string name="heading_to">Heading To:</string>
    <string name="submit1">Submit</string>
    <string name="do_s_and_dont_s">DO\'s and DONT\'s</string>
    <string name="pedestrian12">PEDESTRIAN</string>
</resources>