<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bt.gov.rsta.safejourney.MainActivity">

    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@mipmap/ic_launcher1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:id="@+id/imageView"
        android:contentDescription=""
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:text="@string/safe_journey"
        android:textAppearance="@android:style/TextAppearance.Widget.PopupMenu.Large"
        android:textSize="24sp"
        android:textStyle="italic"
        tools:textStyle="italic"
        android:id="@+id/textView" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:hint="@string/username_or_email_address"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText"
        android:layout_below="@+id/editText"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/login"
        tools:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="190dp"
        android:layout_height="25dp"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_your_password"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="280dp"
        android:layout_height="25dp"
        android:layout_above="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:text="@string/don_t_have_an_account_register"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginBottom="24dp"
        android:text="@string/offline_services"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/imageView" />

</RelativeLayout>
