<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bt.gov.rsta.safejourney.Complaint">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/complaint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/complaint"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/complaintsSelect"
                android:layout_width="216dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_height="25dp" />
            <EditText
                android:id="@+id/emailComp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress" />
            <EditText
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/location"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/vecNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/vehicle_number"
                android:inputType="text" />

            <EditText
                android:id="@+id/headingTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/heading_to"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/description"
                android:inputType="textMultiLine" />


            <Button
                android:id="@+id/complaintSubmit"
                android:layout_width="187dp"
                android:textColor="@color/white"
                android:backgroundTint="#2360ef"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:text="@string/submit1" />


        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
