<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_constraint1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bt.gov.rsta.safejourney.Pedestrian">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="551dp"
        android:layout_margin="20dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/pedestrian12"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/do_s_and_dont_s"
                android:textColor="#f3ff3300"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/des"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
