<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/relLayout"
        tools:ignore="UselessParent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

            <RelativeLayout
                android:layout_height="50dp"
                android:layout_width="match_parent"
                android:id="@+id/relLayoutTopBar"
                android:layout_alignParentTop="true">

                <TextView
                    android:id="@+id/texxtHome"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:text="@string/home1"
                    android:textSize="30sp"
                    android:textStyle="italic"
                    android:layout_margin="10dp"
                    tools:text="Home" />

                <android.support.design.widget.AppBarLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">

                    <android.support.design.widget.TabLayout
                        android:id="@+id/tabs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/white_grey_border_bottom" />


                </android.support.design.widget.AppBarLayout>

            </RelativeLayout>

        <RelativeLayout
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:id="@+id/relLayoutMiddle"
            android:layout_below="@+id/relLayoutTopBar"
            android:layout_above="@+id/relLayoutBotBar">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >


                    <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        app:srcCompat="@drawable/rsta"
                        android:layout_marginBottom="20dp"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/editText2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:ems="10"
                        android:text="@string/rsta"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="#000"/>

                    <TextView
                        android:id="@+id/editText3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:ems="10"
                        android:text="@string/safe_journey1"
                        android:textColor="#f3ff3300"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/editText4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="15dp"
                        android:ems="10"
                        android:text="@string/rsta3"
                        android:textSize="15sp"
                        android:textColor="#000"/>

                    <TextView
                        android:id="@+id/editText5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:ems="10"
                        android:text="@string/mission"
                        android:textColor="#f3ff3300"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/editText7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:ems="10"
                        android:text="@string/rsta1"
                        android:textSize="15sp"
                        android:textColor="#000"/>

                    <TextView
                        android:id="@+id/editText8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:ems="10"
                        android:text="@string/vision"
                        android:textColor="#f3ff3300"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/editText9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:ems="10"
                        android:text="@string/rsta2"
                        android:textSize="15sp"
                        android:textColor="#000"/>

                </LinearLayout>
            </ScrollView>

        </RelativeLayout>

            <RelativeLayout
                android:layout_height="50dp"
                android:layout_width="match_parent"
                android:id="@+id/relLayoutBotBar"
                android:layout_alignParentBottom="true">

                <android.support.design.widget.BottomNavigationView
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:id="@+id/bottomNavView_Bar"
                    android:background="@drawable/white_grey_border_top"
                    app:menu="@menu/navigation">

                </android.support.design.widget.BottomNavigationView>

            </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>