<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bt.gov.rsta.safejourney.SplashScreen">


    <ImageView
        android:id="@+id/imgView1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@+id/imgView2"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_launcher1"
        android:contentDescription=""
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imgView2"
        android:layout_width="400dp"
        android:layout_height="150dp"
        android:layout_marginBottom="72dp"
        android:src="@mipmap/ic_launcher2"
        android:layout_above="@+id/imgView3"
        android:layout_alignParentStart="true"
        android:contentDescription=""
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imgView3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@mipmap/ic_launcher3"
        android:layout_alignTop="@+id/imgView4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imgView4"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="122dp"
        android:src="@mipmap/ic_launcher4"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="39dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_above="@+id/imgView3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
        android:text="@string/an_initiative_by" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_above="@+id/imgView4"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="12dp"
        android:text="@string/developed_by_students_of" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="350dp"
        android:layout_height="25dp"
        android:layout_alignEnd="@+id/textView2"
        android:layout_below="@+id/imgView3"
        android:layout_marginTop="46dp"
        android:text="@string/for_safe_efficient"
        tools:ignore="HardcodedText" />

</RelativeLayout>